2019-10-10-batch-1/14-ingress/sample-ingress.yaml
 apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: nginx
  spec:
    rules:
      - host: python.platformer.com
        http:
          paths:
            - backend:
                serviceName: angular-client
                servicePort: 80
              path: /
            - backend:
                serviceName: python-api
                servicePort: 8080
              path: /api
    # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #     - hosts:
    #         - www.example.com
    #       secretName: example-tls
